# labs

./: CMakeLists.txt
lab-1/src/: func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
lab-2/: CMakeLists.txt
lab-2/src/: main.c
lab-3/: CMakeLists.txt
lab-3/src/: a.cpp  do_while_findFirstElement.cpp  do_while_findFirstNegativeElement.cpp  do_while_main.cpp  do_while_print.cpp  do_while_summ.cpp  do_while_summ2.cpp  for_findFirstElement.cpp  for_findFirstNegativeElement.cpp  for_main.cpp  for_print.cpp  for_summ.cpp  for_summ2.cpp  func.h  while_findFirstElement.cpp  while_findFirstNegativeElement.cpp  while_main.cpp  while_print.cpp  while_summ.cpp  while_summ2.cpp
lab-4/: CMakeLists.txt
lab-4/src/: complex.cpp  complex.h  main.cpp
lab-5/: CMakeLists.txt
lab-5/headers/: Stack.h  Wrap.h
lab-5/src/: main.cpp
lab-6/: CMakeLists.txt
lab-6/headers/: AbstractStack.h  Stack.h
lab-6/src/: Stack.cpp  Wrap.cpp
